src/static/css/site.css
/* ... */
/* Specific pages - art tag gallery */

html[data-url-key="localized.artTagGallery"] #featured-direct-line,
html[data-url-key="localized.artTagGallery"] #featured-indirect-line,
html[data-url-key="localized.artTagGallery"] #showing-direct-line,
html[data-url-key="localized.artTagGallery"] #showing-indirect-line {
  display: none;
}

html[data-url-key="localized.artTagGallery"] #showing-all-line a,
html[data-url-key="localized.artTagGallery"] #showing-direct-line a,
html[data-url-key="localized.artTagGallery"] #showing-indirect-line a {
  text-decoration: underline;
  text-decoration-style: dotted;
}

/* Specific pages - "Art Tag Network" listing */

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd:not(#network-top-dl > dd) {
  margin-left: 20px;
  margin-bottom: 0;
  padding-left: 10px;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd:not(#network-top-dl > dd):not(:last-child) {
  padding-bottom: 20px;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] #network-stat-line {
  padding-left: 10px;
  margin-left: 20px;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] #network-stat-line a {
  text-decoration: underline;
  text-decoration-style: dotted;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] .network-tag-stat {
  display: inline-block;
  text-align: right;
  min-width: 5ch;
  margin-right: 2px;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dt + dt:has(+ dd) {
  padding-top: 20px;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dt:has(+ dd) .network-tag-stat {
  text-align: center;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dt {
  padding-left: 10px;
  margin-left: 20px;
  margin-bottom: 0;
  padding-bottom: 2px;
  max-width: unset;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd:not(#network-top-dl > dd).even,
html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dt:not(#network-top-dl > dt).even {
  border-left: 1px solid #eaeaea;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd:not(#network-top-dl > dd).odd,
html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dt:not(#network-top-dl > dt).odd {
  border-left: 1px solid #7b7b7b;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd,
html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dt {
  position: relative;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd:last-child:not(#network-top-dl > dd).odd::after,
html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dt:last-child:not(#network-top-dl > dt).odd::after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  background: #7b7b7b;
  position: absolute;
  bottom: -4px;
  left: -4px;
}

html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dd:last-child:not(#network-top-dl > dd).even::after,
html[data-url-key="localized.listing"][data-url-value0="tags/network"] dl dt:last-child:not(#network-top-dl > dt).even::after {
  content: "";
  display: block;
  width: 6px;
  height: 6px;
  background: #eaeaea;
  position: absolute;
  bottom: -3px;
  left: -3px;
  border-bottom-right-radius: 6px;
  border-top-left-radius: 3px;
}

/* Images */

.image-container {
  display: block;
  box-sizing: border-box;
  position: relative;
  height: 100%;
  overflow: hidden;

  background-color: var(--dim-color);
  border: 2px solid var(--primary-color);
  border-radius: 0;
  box-shadow: 0 2px 4px -2px var(--bg-black-color) inset;

  text-align: left;
  color: white;
}

.image-text-area {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 5px 15px;

  background: rgba(0, 0, 0, 0.65);
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;

  line-height: 1.35em;
  color: var(--primary-color);
  font-style: oblique;
  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.75);
}

.image-outer-area {
  width: 100%;
  height: 100%;
  padding: 5px;
  box-sizing: border-box;
}

.image-link {
  border-bottom: 1px solid #ffffff03;
  border-radius: 2.5px 2.5px 3px 3px;
  box-shadow:
    0 1px 8px -3px var(--bg-black-color);
}

.image-inner-area {
  position: relative;
  width: 100%;
  height: 100%;
}

.image-link .image-inner-area {
  /* Jankily fix a rendering issue with border-radius on Safari.
   * The `-webkit-` prefix is only to keep this from applying on
   * other browsers (well, Firefox), where it doesn't *break*
   * anything, but also isn't necessary.
   */
  -webkit-transform: translateZ(0);
}

img {
  object-fit: cover;
}

.image-inner-area::after {
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom-left-radius: 0.5px;
  opacity: 0.035;
  box-shadow:
    6px -6px 2px -4px white inset;
}

img.pixelate, .pixelate img {
  image-rendering: crisp-edges;
}

.reveal-text-container {
  position: absolute;
  top: 15px;
  left: 10px;
  right: 10px;
  bottom: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.grid-item .reveal-text {
  font-size: 0.9em;
}

.reveal-text {
  color: white;
  text-align: center;
  font-weight: bold;
  padding-bottom: 0.5em;
  font-size: 0.8rem;
}

.reveal-symbol {
  display: inline-block;
  width: 1em;
  height: 1em;
  margin-bottom: 0.1em;

  font-size: 1.6em;
  opacity: 0.8;
}

.reveal-interaction {
  opacity: 0.8;
  text-decoration: underline;
  text-decoration-style: dotted;
}

.reveal .image {
  opacity: 0.7;
  filter: blur(20px) brightness(0.7);
}

.reveal .image.reveal-thumbnail {
  position: absolute;
  top: 0;
  left: 0;
  image-rendering: pixelated;
}
/* ... */

